# mprpc

./: CMakeLists.txt  README.md  autobuild.sh  记录.txt
example/: friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpcchannel.h  mprpcconfig.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  mprpccontrlller.h  rpcprovider.h  zookeeperutil.h
test/: boost  boost.cpp  muduo.cpp
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
